// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expense with 1 expense 1`] = `
<div>
  <h1>
     viewing 
    1
     
    expense
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`should correctly render Expense with multiple expense 1`] = `
<div>
  <h1>
     viewing 
    23
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;
